# publisher

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.worker  alembic.ini  celerybeat-schedule  main.py  pyproject.toml
backend/api/dependencies/: auth.py
backend/api/middleware/: audit.py  logging.py  metrics.py  security.py
backend/api/v1/: accounts.py  audit.py  auth.py  posts.py  sessions.py
backend/domain/repositories/: account_repository.py  audit_log_repository.py  browser_session_repository.py  post_repository.py  user_repository.py
backend/domain/services/: account_service.py  auth_service.py  post_service.py
backend/infrastructure/browser/: browser_session.py  facebook_publisher.py  playwright_pool.py  tiktok_publisher.py
backend/infrastructure/cache/: client.py
backend/infrastructure/database/: session.py
backend/infrastructure/database/migrations/: env.py
backend/infrastructure/database/models/: __init__.py  (+5 more)
backend/infrastructure/encryption/: cookie_cipher.py
backend/infrastructure/queue/: celery_app.py
backend/schemas/: account.py  auth.py  common.py  post.py  session.py
backend/scripts/: seed_admin.py
backend/shared/: config.py  exceptions.py
backend/shared/helpers/: hash.py  jwt.py
backend/shared/utils/: logger.py  pagination.py
backend/tests/: conftest.py
backend/tests/e2e/: test_account_flow.py  test_auth_flow.py  test_publish_flow.py  test_schedule_flow.py
backend/tests/integration/: conftest.py  test_security.py
backend/tests/load/: test_browser_farm_load.py
(+57 files in other folders)
